--- a/2-2-server-query/package.json
+++ b/2-2-server-query/package.json
@@ -2,15 +2,16 @@
   "name": "2-2-server-query",
   "version": "1.0.0",
   "description": "",
-  "main": "database.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "author": "yalco",
+  "author": "Eun Seunggyun",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.19.1",
-    "convert-csv-to-json": "^1.0.0"
+    "apollo-server": "^3.5.0",
+    "convert-csv-to-json": "^1.3.1",
+    "graphql": "^16.0.1"
   }
 }
